Updating Normalize to latest, separating the baseline for easier maintenance.

--- a/index.html
+++ b/index.html
@@ -316,15 +316,15 @@
 						    	<input name="form_week" id="form_week" type="week">
 						    </li>
 
-						    <li>
+						    <!--li>
 						    	<label for="form_time">Time:</label>
 						    	<input name="form_time" id="form_time" type="time">
-						    </li>
+						    </li-->
 
-						    <li>
+						    <!--li>
 						    	<label for="form_datetime_local">Local Time:</label>
 						    	<input name="form_datetime_local" id="form_datetime_local" type="datetime-local">
-						    </li>
+						    </li-->
 
 						    <li>
 						    	<label for="email">Email:</label>
@@ -337,7 +337,7 @@
 
 						    <li>
 						    	<label for="form_telephone">Phone:</label>
-						    	<input name="form_telephone" id="form_telephone" type="telephone">
+						    	<input name="form_telephone" id="form_telephone" type="tel">
 						    </li>
 
 						    <li>
