--- a/index.html
+++ b/index.html
@@ -316,15 +316,20 @@
 						    	<input name="form_week" id="form_week" type="week">
 						    </li>
 
-						    <!--li>
+						    <li>
 						    	<label for="form_time">Time:</label>
 						    	<input name="form_time" id="form_time" type="time">
-						    </li-->
+						    </li>
 
-						    <!--li>
+						    <li>
+						    	<label for="form_datetime">Datetime:</label>
+						    	<input name="form_datetime" id="form_datetime" type="datetime">
+						    </li>
+
+						    <li>
 						    	<label for="form_datetime_local">Local Time:</label>
 						    	<input name="form_datetime_local" id="form_datetime_local" type="datetime-local">
-						    </li-->
+						    </li>
 
 						    <li>
 						    	<label for="email">Email:</label>
